# cdsctf

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  rust-toolchain.toml  rustfmt.toml  taplo.toml
crates/assets/: Cargo.toml
crates/assets/embed/: banner.txt
crates/assets/embed/configs/: constant.toml  variable.toml
crates/assets/src/: lib.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs  session.rs  traits.rs
crates/captcha/: Cargo.toml
crates/captcha/src/: hcaptcha.rs  image.rs  lib.rs  pow.rs  traits.rs  turnstile.rs
crates/checker/: Cargo.toml
crates/checker/src/: lib.rs  traits.rs  worker.rs
crates/checker/src/modules/: audit.rs  crypto.rs  flag.rs  fs.rs  leet.rs  mod.rs  regex.rs  suid.rs
crates/checker/src/util/: leet.rs  mod.rs  suid.rs  xxtea.rs
crates/cluster/: Cargo.toml
crates/cluster/src/: lib.rs  traits.rs  worker.rs
crates/cluster/src/util/: mod.rs
crates/config/: Cargo.toml  build.rs
crates/config/src/: lib.rs  traits.rs
crates/config/src/auth/: mod.rs
crates/config/src/captcha/: mod.rs  turnstile.rs
crates/config/src/cluster/: mod.rs  proxy.rs
crates/config/src/constant/: mod.rs
crates/config/src/email/: mod.rs
crates/config/src/logger/: mod.rs
crates/config/src/meta/: mod.rs
crates/config/src/metric/: mod.rs
crates/config/src/queue/: mod.rs
crates/config/src/site/: mod.rs
crates/config/src/telemetry/: mod.rs
crates/config/src/variable/: mod.rs
crates/db/: Cargo.toml
crates/db/src/: challenge.rs  config.rs  email.rs  game.rs  game_challenge.rs  game_notice.rs  idp.rs  lib.rs  note.rs  submission.rs  team.rs  team_user.rs  traits.rs  user.rs  user_idp.rs
crates/db/src/entity/: challenge.rs  config.rs  email.rs  game.rs  game_challenge.rs  game_notice.rs  game_team.rs  game_team_user.rs  idp.rs  mod.rs  note.rs  pod.rs  submission.rs  team.rs  team_user.rs  user.rs  user_idp.rs
crates/db/src/transfer/: challenge.rs  config.rs  game.rs  game_challenge.rs  game_notice.rs  game_team.rs  game_team_user.rs  mod.rs  pod.rs  submission.rs  team.rs  team_user.rs  user.rs  user_team.rs
crates/db/src/util/: mod.rs
crates/email/: Cargo.toml
crates/email/src/: lib.rs  traits.rs  util.rs  worker.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  traits.rs  util.rs  worker.rs
crates/env/: Cargo.toml  build.rs
crates/env/src/: consts.rs  lib.rs  traits.rs
crates/env/src/auth/: mod.rs
crates/env/src/cache/: mod.rs
crates/env/src/cluster/: mod.rs
crates/env/src/db/: mod.rs
crates/env/src/jwt/: mod.rs
crates/env/src/media/: mod.rs
crates/env/src/metric/: mod.rs
crates/env/src/observe/: mod.rs
crates/env/src/queue/: mod.rs
crates/env/src/server/: mod.rs
crates/event/: Cargo.toml
crates/event/src/: lib.rs  traits.rs
crates/event/src/types/: game_challenge.rs  mod.rs
crates/idp/: Cargo.toml
crates/idp/src/: lib.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs  traits.rs
crates/mailbox/: Cargo.toml
crates/mailbox/src/: lib.rs  traits.rs  worker.rs
crates/media/: Cargo.toml
crates/media/src/: challenge.rs  lib.rs  presigner.rs  traits.rs  util.rs
crates/media/src/config/: email.rs  logo.rs  mod.rs
crates/migrator/: Cargo.toml
crates/migrator/src/: lib.rs
crates/migrator/src/migrations/: m20250501_000001_create_config.rs  m20250501_000002_create_user.rs  m20250501_000003_create_game.rs  m20250501_000004_create_challenge.rs  m20250501_000005_create_team.rs  m20250501_000006_create_game_notice.rs  m20250501_000007_create_game_challenge.rs  m20250501_000008_create_team_user.rs  m20250501_000009_create_submission.rs  m20251024_000001_create_config.rs  m20251024_000002_create_user.rs  m20251024_000003_create_email.rs  m20251024_000004_create_game.rs  m20251024_000005_create_challenge.rs  m20251024_000006_create_team.rs  m20251024_000007_create_game_notice.rs  m20251024_000008_create_game_challenge.rs  m20251024_000009_create_team_user.rs  m20251024_000010_create_submission.rs  m20260201_000001_create_config.rs  m20260201_000002_create_user.rs  m20260201_000003_create_email.rs  m20260201_000004_create_game.rs  m20260201_000005_create_challenge.rs  m20260201_000006_create_team.rs  m20260201_000007_create_game_notice.rs  m20260201_000008_create_game_challenge.rs  m20260201_000009_create_team_user.rs  m20260201_000010_create_submission.rs  m20260201_000011_create_note.rs  m20260201_000012_create_idp.rs  m20260201_000013_create_user_idp.rs  mod.rs
crates/observe/: Cargo.toml
crates/observe/src/: lib.rs  traits.rs
crates/observe/src/exporter/: mod.rs
crates/observe/src/logger/: mod.rs
crates/observe/src/meter/: mod.rs  web.rs
crates/observe/src/tracer/: mod.rs
crates/queue/: Cargo.toml
crates/queue/src/: lib.rs  traits.rs
crates/search/: Cargo.toml
crates/search/src/: challenge.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: lib.rs  logger.rs  main.rs  migrator.rs  traits.rs
crates/server/src/middleware/: auth.rs  network.rs  telemetry.rs
crates/server/src/model/: mod.rs  submission.rs  team.rs
crates/server/src/openapi/: mod.rs
crates/server/src/router/: healthz.rs  mod.rs
crates/server/src/util/: cluster.rs  email.rs  jwt.rs  loader.rs  media.rs  mod.rs
crates/server/src/worker/: game_calculator.rs  mod.rs  submission_checker.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs  metric.rs
crates/telemetry/src/logger/: mod.rs
crates/telemetry/src/meter/: mod.rs  system.rs  web.rs
crates/telemetry/src/tracer/: mod.rs
crates/web/: Cargo.toml
crates/web/src/: docs.rs  lib.rs  traits.rs
crates/web/src/extract/: mod.rs
crates/web/src/middleware/: auth.rs  error.rs  mod.rs  network.rs  telemetry.rs
crates/web/src/model/: challenge.rs  game.rs  game_challenge.rs  game_notice.rs  mod.rs  user.rs
crates/web/src/router/: healthz.rs  mod.rs  proxy.rs
crates/web/src/util/: cluster.rs  crypto.rs  email.rs  jwt.rs  loader.rs  math.rs  media.rs  mod.rs  network.rs
crates/web/src/worker/: calculator.rs  (+4 more)
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
(+769 files in other folders)
