[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["ElaBosak233 <i@e23.dev>"]
edition = "2024"
publish = false
homepage = "https://cdsctf.e23.dev"
repository = "https://github.com/ElaBosak233/cdsctf"
rust-version = "1.85.0"
version = "1.2.3"

[workspace.dependencies]
# Local Libraries
cds-assets = { path = "crates/assets" }
cds-cache = { path = "crates/cache" }
cds-captcha = { path = "crates/captcha" }
cds-checker = { path = "crates/checker" }
cds-cluster = { path = "crates/cluster" }
cds-config = { path = "crates/config" }
cds-logger = { path = "crates/logger" }
cds-db = { path = "crates/db" }
cds-email = { path = "crates/email" }
cds-media = { path = "crates/media" }
cds-queue = { path = "crates/queue" }
cds-search = { path = "crates/search" }
cds-telemetry = { path = "crates/telemetry" }
cds-web = { path = "crates/web" }

# Async
async-trait = { version = "0.1" }
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7.15" }
futures = { version = "^0.3" }
futures-util = { version = "0.3" }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Web
axum = { version = "0.8", features = [
    "ws",
    "http2",
    "multipart",
    "macros",
    "tower-log",
    "tracing",
    "json",
] }
rust-embed = { version = "8.7" }
mime = { version = "0.3" }
wsrx = { version = "0.3", features = ["server"] }
cookie = { version = "0.18.1" }
tower_governor = { version = "0.6" }

# Security
rustls = { version = "0.23", features = ["ring"] }
ring = { version = "0.17" }
hex = { version = "0.4.3" }
jsonwebtoken = { version = "9.3.1" }
argon2 = { version = "0.5" }
aes = { version = "0.8" }

# Data Handling
uuid = { version = "1.16", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics"
] }
nanoid = { version = "0.4" }
regex = { version = "1.11" }
chrono = { version = "0.4", features = ["serde"] }
toml = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_repr = { version = "0.1" }
serde_with = { version = "3.12" }
http-serde = { version = "2.1" }

# Error Handling
thiserror = { version = "2.0" }
anyhow = { version = "1.0" }

# Tracing
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "json",
] }
tracing-appender = "0.2"
tracing-error = { version = "0.2" }
tracing-opentelemetry = { version = "0.29" }

# Database
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "debug-print",
    "with-uuid",
    "macros",
    "with-json",
    "runtime-tokio-rustls",
] }

# Message Queue
async-nats = { version = "0.39" }

# Cache
fred = { version = "10.1", features = [
    "enable-rustls-ring",
    "dns",
    "mocks",
    "monitor",
    "partial-tracing",
    "sentinel-client",
    "serde-json",
] }

# Search Engine
tantivy = { version = "0.24" }

# Containerization & Orchestration
kube = { version = "0.98", features = [
    "client",
    "config",
    "runtime",
    "derive",
    "rustls-tls",
    "ws"
] }
k8s-openapi = { version = "0.24", features = ["latest"] }

# Script Engine
rune = { version = "0.13", features = ["tokio"] }
rune-modules = { version = "0.13", features = ["full"] }

# Telemetry
opentelemetry = { version = "0.28", features = ["metrics"] }
opentelemetry-otlp = { version = "0.28", features = ["metrics", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-appender-tracing = { version = "0.28" }
sysinfo = { version = "0.33" }

# Miscellaneous
once_cell = { version = "1.21" }
validator = { version = "0.20", features = ["derive"] }
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
image = { version = "0.25.6" }
webp = { version = "0.3.0", features = ["image"] }
biosvg = { version = "0.1" }
lettre = { version = "0.11", features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "pool",
    "hostname",
    "tracing",
    "builder"
], default-features = false }
dashmap = { version = "6.1" }

[profile.release]
opt-level = 3
strip = true
lto = "thin"
panic = "abort"
codegen-units = 1
