[workspace]
members  = ["crates/*"]
resolver = "3"

[workspace.package]
authors      = ["ElaBosak233 <i@e23.dev>"]
edition      = "2024"
homepage     = "https://cdsctf.e23.dev"
publish      = false
repository   = "https://github.com/elabosak233/cdsctf"
rust-version = "1.94.0"
version      = "1.9.0"

[workspace.dependencies]
# Local Libraries
cds-assets   = { path = "crates/assets" }
cds-cache    = { path = "crates/cache" }
cds-captcha  = { path = "crates/captcha" }
cds-checker  = { path = "crates/checker" }
cds-cluster  = { path = "crates/cluster" }
cds-db       = { path = "crates/db" }
cds-engine   = { path = "crates/engine" }
cds-env      = { path = "crates/env" }
cds-event    = { path = "crates/event" }
cds-mailbox  = { path = "crates/mailbox" }
cds-media    = { path = "crates/media" }
cds-migrator = { path = "crates/migrator" }
cds-observe  = { path = "crates/observe" }
cds-queue    = { path = "crates/queue" }

# Async
async-stream = { version = "0.3" }
async-trait  = { version = "0.1" }
futures-util = { version = "0.3" }
tokio        = { version = "1.50", features = ["full"] }
tokio-util   = { version = "0.7.18" }

# Web
axum = { version = "0.8", features = [
  "ws",
  "http2",
  "multipart",
  "macros",
  "tower-log",
  "tracing",
  "json",
] }
mime = { version = "0.3" }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tower-sessions = { version = "0.15" }
tower-sessions-core = { version = "0.15" }
#tower-sessions-redis-store = { version = "0.16" }
tower_governor = { version = "0.8" }
wsrx           = { version = "0.5", features = ["server"] }

# Security
aes    = { version = "0.8" }
argon2 = { version = "0.5" }
hex    = { version = "0.4" }
ring   = { version = "0.17" }
rustls = { version = "0.23", features = ["ring"] }

# Data Handling
figment    = { version = "0.10", features = ["toml", "env"] }
http-serde = { version = "2.1" }
nanoid     = { version = "0.4" }
regex      = { version = "1.12" }
rmp-serde  = { version = "1.3" }
serde      = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_repr = { version = "0.1" }
serde_with = { version = "3.17" }
time       = { version = "0.3", features = ["serde", "macros", "local-offset"] }
toml       = { version = "1.0" }
uuid       = { version = "1.22", features = ["v4", "fast-rng", "macro-diagnostics"] }

# Error Handling
anyhow    = { version = "1.0" }
thiserror = { version = "2.0" }

# Observability & Monitoring
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry-appender-tracing = { version = "0.31" }
opentelemetry-otlp = { version = "0.31", features = [
  "gzip-http",
  "reqwest-rustls",
] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
sysinfo = { version = "0.38" }
tracing = { version = "0.1" }
tracing-appender = "0.2"
tracing-error = { version = "0.2" }
tracing-opentelemetry = { version = "0.32" }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "std",
  "json",
] }

# Database
sea-orm = { version = "1.1", features = [
  "sqlx-postgres",
  "debug-print",
  "with-uuid",
  "macros",
  "with-json",
  "runtime-tokio-rustls",
] }
sea-orm-migration = { version = "1.1" }

# Message Queue
async-nats = { version = "0.46" }

# Cache
fred = { version = "10.1", features = [
  "enable-rustls-ring",
  "dns",
  "mocks",
  "monitor",
  "partial-tracing",
  "sentinel-client",
  "serde-json",
] }

# Containerization & Orchestration
k8s-openapi = { version = "0.27", features = ["latest"] }
kube = { version = "3.0", features = [
  "client",
  "config",
  "runtime",
  "derive",
  "rustls-tls",
  "ws",
] }

# Script Engine
rune         = { version = "0.14", features = ["tokio"] }
rune-modules = { version = "0.14", features = ["full"] }

# Miscellaneous
biosvg = { version = "0.1" }
dashmap = { version = "6.1" }
image = { version = "0.25.10" }
lettre = { version = "0.11", features = [
  "tokio1-rustls-tls",
  "smtp-transport",
  "pool",
  "hostname",
  "tracing",
  "builder",
], default-features = false }
once_cell = { version = "1.21" }
reqwest = { version = "0.13", features = ["json"] }
rust-embed = { version = "8.11" }
rust-s3 = { version = "0.37", default-features = false, features = [
  "tokio-rustls-tls",
  "fail-on-err",
  "tags",
] }
scraper = { version = "0.25" }
shadow-rs = { version = "1.7" }
validator = { version = "0.20", features = ["derive"] }
webp = { version = "0.3.1", features = ["image"] }

# Allocator
mimalloc = { version = "*", features = ["secure"] }

[profile.release]
codegen-units = 1
lto           = "thin"
opt-level     = 3
panic         = "abort"
strip         = true
