[package]
name = "cds-cache"
version = "0.0.1"
edition = "2024"
publish = false
resolver = "2"

[dependencies]
cds-config = {workspace = true}

fred = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }