[package]
name     = "cds-cache"
resolver = "3"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
cds-env = { workspace = true }

anyhow              = { workspace = true }
async-trait         = { workspace = true }
fred                = { workspace = true }
rmp-serde           = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
thiserror           = { workspace = true }
time                = { workspace = true }
tower-sessions-core = { workspace = true }
tracing             = { workspace = true }
