[package]
name = "cds-captcha"
version = "0.0.1"
edition = "2024"
publish = false
resolver = "2"

[dependencies]
cds-cache = { workspace = true }
cds-config = { workspace = true }

hex = { workspace = true }
ring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
nanoid = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }