[package]
name = "cds-checker"
resolver = "3"

authors = { workspace = true }
edition  = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
cds-db = { workspace = true }
cds-media = { workspace = true }

rune = { workspace = true }
rune-modules = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
time = { workspace = true }
dashmap = { workspace = true }
ring = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
aes = { workspace = true }
tracing = { workspace = true }