[package]
name = "cds-cluster"
version = "0.0.1"
edition = "2024"
publish = false
resolver = "2"

[dependencies]
cds-config = { workspace = true }
cds-db = { workspace = true }
cds-checker = { workspace = true }

tokio = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
axum = { workspace = true }
once_cell = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
wsrx = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }