[package]
name = "cds-cluster"
resolver = "3"

authors = { workspace = true }
edition  = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
cds-env = { workspace = true }
cds-db = { workspace = true }
cds-checker = { workspace = true }

tokio = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
axum = { workspace = true }
once_cell = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
wsrx = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
nanoid = { workspace = true }