[package]
name     = "cds-cluster"
resolver = "3"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
cds-checker = { workspace = true }
cds-db      = { workspace = true }
cds-env     = { workspace = true }

anyhow       = { workspace = true }
axum         = { workspace = true }
futures-util = { workspace = true }
k8s-openapi  = { workspace = true }
kube         = { workspace = true }
nanoid       = { workspace = true }
once_cell    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
wsrx         = { workspace = true }
