[package]
name     = "cds-db"
resolver = "3"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
cds-env = { workspace = true }

anyhow      = { workspace = true }
async-trait = { workspace = true }
once_cell   = { workspace = true }
sea-orm     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_repr  = { workspace = true }
thiserror   = { workspace = true }
time        = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }

[lib]
path = "src/lib.rs"
