[package]
name = "cds-email"
resolver = "3"

authors = { workspace = true }
edition  = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
cds-db = { workspace = true }

lettre = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
