[package]
name = "cds-engine"
resolver = "3"

authors = { workspace = true }
edition  = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
rune = { workspace = true }
rune-modules = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
dashmap = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }

[lib]
path = "src/lib.rs"
