[package]
name     = "cds-engine"
resolver = "3"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
anyhow       = { workspace = true }
dashmap      = { workspace = true }
once_cell    = { workspace = true }
rune         = { workspace = true }
rune-modules = { workspace = true }
serde        = { workspace = true }
thiserror    = { workspace = true }
time         = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }

[lib]
path = "src/lib.rs"
