[package]
name = "cds-env"
resolver = "3"

authors = { workspace = true }
edition  = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
once_cell = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
nanoid = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
shadow-rs = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }

[lib]
path = "src/lib.rs"
