[package]
name     = "cds-env"
resolver = "3"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
anyhow    = { workspace = true }
figment   = { workspace = true }
nanoid    = { workspace = true }
once_cell = { workspace = true }
serde     = { workspace = true }
shadow-rs = { workspace = true }
thiserror = { workspace = true }
tokio     = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }

[lib]
path = "src/lib.rs"
