[package]
name = "cds-event"
resolver = "3"

authors = { workspace = true }
edition  = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
cds-queue = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }