[package]
name = "cds-logger"
version = "0.0.1"
edition = "2024"

[dependencies]
cds-config = { workspace = true }
cds-telemetry = { workspace = true }

tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }