[package]
name = "cds-media"
resolver = "3"

authors = { workspace = true }
edition  = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
cds-env = { workspace = true }

ring = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }
webp = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
