[package]
name     = "cds-media"
resolver = "3"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
cds-env = { workspace = true }

anyhow     = { workspace = true }
hex        = { workspace = true }
image      = { workspace = true }
ring       = { workspace = true }
rust-embed = { workspace = true }
serde      = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }
uuid       = { workspace = true }
webp       = { workspace = true }
