[package]
name = "cds-observe"
resolver = "3"

authors = { workspace = true }
edition  = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
cds-env = { workspace = true }

tracing = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }