[package]
name     = "cds-observe"
resolver = "3"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
cds-env = { workspace = true }

anyhow                         = { workspace = true }
once_cell                      = { workspace = true }
opentelemetry                  = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry-otlp             = { workspace = true }
opentelemetry_sdk              = { workspace = true }
sysinfo                        = { workspace = true }
thiserror                      = { workspace = true }
tokio                          = { workspace = true }
tracing                        = { workspace = true }
tracing-appender               = { workspace = true }
tracing-error                  = { workspace = true }
tracing-opentelemetry          = { workspace = true }
tracing-subscriber             = { workspace = true }
