[package]
name = "cds-queue"
resolver = "3"

authors = { workspace = true }
edition  = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
cds-config = { workspace = true }

tracing = { workspace = true }
serde = { workspace = true }
once_cell = { workspace = true }
async-nats = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }