[package]
name = "cds-server"
resolver = "3"

authors = { workspace = true }
edition  = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
cds-assets = { workspace = true }
cds-media = { workspace = true }
cds-migrator = { workspace = true }
cds-env = { workspace = true }
cds-db = { workspace = true }
cds-captcha = { workspace = true }
cds-email = { workspace = true }
cds-cluster = { workspace = true }
cds-queue = { workspace = true }
cds-cache = { workspace = true }
cds-checker = { workspace = true }
cds-telemetry = { workspace = true }
cds-logger = { workspace = true }

tracing = { workspace = true }
tokio = { workspace = true }
rustls = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
argon2 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
http-serde = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-redis-store = { workspace = true }
mime = { workspace = true }
validator = { workspace = true }
nanoid = { workspace = true }
cookie = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tower_governor = { workspace = true }
scraper = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "cds-server"
path = "src/main.rs"